fix: paragraph wrap

--- a/app/scss/base/_reset.scss
+++ b/app/scss/base/_reset.scss
@@ -27,9 +27,9 @@ body {
     align-items: center;
 }
 
-p {
-    white-space: nowrap;
-}
+// p {
+//     white-space: nowrap;
+// }
 
 img,
 svg {
